--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.40",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "clsx": "^1.0.4",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^2.2.2",
     "material-table": "^1.56.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
